# CodingPlayground

./: .gitignore  .gitmodules  CMakeLists.txt  LICENCE  README.md
examples/: CMakeLists.txt  StackAllocator.cpp  StackAllocator.hpp  UI.cpp  UI.hpp  main.cpp
include/GUI/: RectCut.hpp
src/: CMakeLists.txt
